Fix Phase 0.8 workflow contract per strict code review
Seal IWorkflowStep so the step abstraction is closed at compile time
(no more implementable-but-unsafe-to-downcast interface); eliminate the
.internal subpackage by moving concrete step/redaction types into
io.webagent4j.workflow as package-private classes. Keep IWorkflowCondition
as a trusted extension point but handle every extension hook defensively
in WorkflowEngine and Workflow.Builder.

Close remaining input-validation and secret-redaction gaps: reject an
optional input supplied under a mismatched declaration before step 0
instead of silently ignoring it; reject a duplicate input declaration and
a re-supplied WorkflowInputs entry; reject an undeclared supplied input
(new WorkflowFailureType.UNDECLARED_INPUT; remove the dead STEP_FAILED
constant); preserve caller/declaration/publication order with
LinkedHashMap-backed immutable views instead of Map#copyOf; redact a
known secret's raw text everywhere it appears in WorkflowInputs/
WorkflowOutputs rendering, not only in the field declared secret; redact
before bounding, not after; redact ActionFailure#message() too; register
a secret-declared output as known immediately so later failures are
redacted against it; make WorkflowConditions#not() defer to the wrapped
condition lazily instead of eagerly calling describe()/
referencedVariables() at composition time.

Add WorkflowStrictReviewCorrectionsTest (37 tests) covering the fixes;
113/113 workflow-module tests pass. Update docs/workflow.md,
docs/public-api.md, CHANGELOG.md, and the PR body to describe the
corrected contract truthfully.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MBEHMGuk9QC4tyX9ppC8gA